--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ pyrogram==2.0.106
 tgcrypto
 requests
 pyromod==3.1.6
-yt-dlp==2023.12.30
-ffmpeg
+yt-dlp==2024.8.6
+python-ffmpeg=2.0.12
 aiohttp==3.9.1
 aiofiles==23.2.1
 asyncio
